# OpenYuma

./: .travis.yml  Dockerfile  Makefile  README  README.md  TODO
SPECS/: dot-rpmmacros  orig-yuma.spec  yuma2.spec  yuma2all.spec
debian/: changelog  control  copyright  dirs  postinst  rules  yuma-dev.install  yuma-doc.install  yuma.install
debian/2nd-yuma/: changelog  control  copyright  postinst  rules  shlibs.yuma-shlibs  yuma.install
debian/orig-yuma/: changelog  control  copyright  docs  rules  shlibs.yuma-shlibs  yuma-client.install  yuma-dev.install  yuma-server.install  yuma-shlibs.install  yuma.substvars
example-modules/helloworld/: Makefile.am  helloworld.c  helloworld.yang
example-modules/ietf-interfaces/: Makefile.am  README  configure.ac  ietf-interfaces.c
libtecla/: Makefile.in  getline.c
libtoaster/: Makefile
libtoaster/src/: Makefile  toaster.c  toaster.c.start  toaster.h  toaster.h.start
netconf/: Makefile
netconf/MIBS/: INTEGRATED-SERVICES-MIB  Makefile
netconf/data/: c_header.txt  py_header.txt  test.xml  yangdump-css-contents.txt
netconf/data/test/: test.xml
netconf/doc/: Makefile  writer2xhtml_yuma.xml
netconf/doc/extra/: AUTHORS  (+2 more)
netconf/etc/: Makefile  netconfd-sample.conf  yangcli-sample.conf  yangdiff-sample.conf  yangdump-sample.conf
netconf/man/: Makefile  make_sil_dir.1  netconf-subsystem.1  netconfd.1  yangcli.1  yangdiff.1  yangdump.1
netconf/modules/: Makefile
netconf/scripts/: start-replay  test-cancel
netconf/src/: Makefile  check-copyright.py  check-len.py
netconf/test/: Doxyfile  README.TXT  make-doxygen.sh
netconf/util/: Makefile  README.fedora  README.ubuntu  dot-svnignore  dot-svnignore-tecla  gitversion  make-src-tarball.sh  make-svn-src-tarball.sh  make-tarball.sh  make_sil_dir  makefile-top.sil  makefile.sil  prep-deb-tree.sh  prep-deb.sh  prep-rpm.sh  rename_yumadebs.sh
(+688 files in other folders)
