netconfmodule_LTLIBRARIES = libietf-interfaces.la

libietf_interfaces_la_SOURCES = \
ietf-interfaces.c

libietf_interfaces_la_CPPFLAGS = -I/usr/include/yuma/agt -I/usr/include/yuma/mgr -I/usr/include/yuma/ncx -I/usr/include/yuma/platform -I/usr/include/libxml2 -I/usr/include/libxml2/libxml
libietf_interfaces_la_LDFLAGS = -module -lagt -lncx -lxml2 -lz -ldl

#yang_DATA = ietf-interfaces.yang
